@@ -1,3 +1,6 @@
+2007-05-15  Jean-Louis Martineau <martineau@zmanda.com>
+	* client-src/sendsize.c: Set qlist before using it.
+
 2007-04-26  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amflush.c: Quote L_DISK and FLUSH line.
 	* server-src/driver.c: Parse quoted FLUSH line.
